@@ -164,6 +164,8 @@ namespace Assistant
 
 			m_Visible = true;
 			m_Movable = true;
+
+			Agent.InvokeItemCreated( this );
 		}
 
 		public ItemID ItemID
